--- a/pages/home.html
+++ b/pages/home.html
@@ -119,4 +119,110 @@
       <div class="chart"></div>
     </div>
   </div>
+  <!-- Section-5 -->
+  <div class="section-5">
+    <h2>Новости</h2>
+    <div class="cards">
+      <div class="card">
+        <div class="image">
+          <img src="../images/card.png" alt="" />
+        </div>
+        <div class="info_card">
+          <div class="head_info_card">
+            <div class="square">
+              <span>20</span>
+              <span>ЯНВ</span>
+            </div>
+            <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</h3>
+          </div>
+          <p class="body_info_card">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+          </p>
+          <div class="footer_card">
+            <span>11.12.2023</span>
+            <span>Экономика</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image">
+          <img src="../images/card.png" alt="" />
+        </div>
+        <div class="info_card">
+          <div class="head_info_card">
+            <div class="square">
+              <span>20</span>
+              <span>ЯНВ</span>
+            </div>
+            <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</h3>
+          </div>
+          <p class="body_info_card">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+          </p>
+          <div class="footer_card">
+            <span>11.12.2023</span>
+            <span>Экономика</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image">
+          <img src="../images/card.png" alt="" />
+        </div>
+        <div class="info_card">
+          <div class="head_info_card">
+            <div class="square">
+              <span>20</span>
+              <span>ЯНВ</span>
+            </div>
+            <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</h3>
+          </div>
+          <p class="body_info_card">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+          </p>
+          <div class="footer_card">
+            <span>11.12.2023</span>
+            <span>Экономика</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Section-6 -->
+  <div class="section-6">
+    <ul>
+      <li>
+        <span>256</span>
+        <p>Веб сайтов</p>
+      </li>
+      <li>
+        <span>30</span>
+        <p>Организаций</p>
+      </li>
+      <li>
+        <span>56</span>
+        <p>Систем</p>
+      </li>
+      <li>
+        <span>24</span>
+        <p>Мобильных приложений</p>
+      </li>
+    </ul>
+    <div class="logo_lext">
+      <h3>ЦифровоЕ правительствО</h3>
+      <h3>Республики Узбекистан</h3>
+    </div>
+  </div>
+  <footer>
+    <div>
+      <a href="">
+        <img src="../images/footer.png" alt="" />
+      </a>
+    </div>
+    <p>© 2020-2022 все права защищены</p>
+    <p>Внимание! Если Вы нашли ошибку в тексте, выделите её и нажмите Ctrl+Enter для уведомления администрации</p>
+  </footer>
 </div>
