Some part changed

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div id="home">
+<section id="home">
   <!-- Section-1 -->
   <section class="section-1">
     <div class="left">
@@ -111,12 +111,48 @@
   <div class="section-4">
     <div class="info_part">
       <div class="heading_section-3">
-        <h2>Таймлайн истории</h2>
-        <p>становления цифрового правительства в Узбекистане</p>
+        <h2>позиция Узбекистана</h2>
+        <p>в Индексе развития электронного правительства ООН</p>
       </div>
 
       <!-- MAIN CHART -->
-      <div class="chart"></div>
+      <div class="chart">
+        <div class="img">
+          <img src="../images/chart.png" />
+        </div>
+        <div class="timeline">
+          <div class="step">
+            <div class="circle"></div>
+            <div class="step-content">
+              <div class="step-header">
+                <span class="rounded-box">Шаг 1</span>
+                <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+              <div class="step-text">Оцените удобство и простоту оказания</div>
+            </div>
+          </div>
+          <div class="step">
+            <div class="circle"></div>
+            <div class="step-content">
+              <div class="step-header">
+                <span class="rounded-box">Шаг 2</span>
+                <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+              <div class="step-text">Оцените удобство и простоту оказания</div>
+            </div>
+          </div>
+          <div class="step">
+            <div class="circle"></div>
+            <div class="step-content">
+              <div class="step-header">
+                <span class="rounded-box">Шаг 3</span>
+                <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+              </div>
+              <div class="step-text">Дайте предложения по улучшению</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Section-5 -->
@@ -225,4 +261,4 @@
     <p>© 2020-2022 все права защищены</p>
     <p>Внимание! Если Вы нашли ошибку в тексте, выделите её и нажмите Ctrl+Enter для уведомления администрации</p>
   </footer>
-</div>
+</section>
