--- a/pages/rating.html
+++ b/pages/rating.html
@@ -1,2 +1,43 @@
-<h1>Rating Us</h1>
-<p>Feel free to reach out to us via this page.</p>
+<section id="rating">
+  <div class="info">
+    <h2>Рейтинг электронного правительства E-Government Development Index</h2>
+    <p>
+      assРейтинг электронного правительства ООН (E-Government Development Index, EGDI) является одним из ключевых индикаторов развития информационного
+      общества в странах мира. Узбекистан поднялся на 18 позиций заняв 69-место среди 193 стран. Исследование было опубликовано в сентябре 2022 года.
+      В данном исследовании ООН наша страна была включена в список стран с самым высоким темпом роста среди 16 развивающихся стран, не имеющих выхода
+      к морю. Рейтинг состоит из трех основных компонентов таких как, онлайн услуги, телекоммуникационная инфраструктура и человеческий капитал.
+      Также, дополнительно учитывается показатель электронного участия и индекс местных онлайн услуг. Город Ташкент по индексу местных онлайн услуг
+      занял 87 место среди 193 городов.
+    </p>
+    <h2>Индекс «Развитие электронного правительства»</h2>
+    <p>
+      assРейтинг электронного правительства ООН (E-Government Development Index, EGDI) является одним из ключевых индикаторов развития информационного
+      общества в странах мира. Узбекистан поднялся на 18 позиций заняв 69-место
+    </p>
+  </div>
+  <ul>
+    <li>
+      <span>87</span>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+    </li>
+    <li>
+      <span>87</span>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+    </li>
+    <li>
+      <span>80</span>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+    </li>
+    <li>
+      <span>57</span>
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</p>
+    </li>
+  </ul>
+  <h2>Индекс «Развитие электронного правительства»</h2>
+  <div class="line_chart_wrap">
+    <div class="Button_switch">
+      <button id="place_btn" class="active">Место</button>
+      <button id="index_btn">Значение индекса</button>
+    </div>
+  </div>
+</section>
