--- a/pages/rating.html
+++ b/pages/rating.html
@@ -39,5 +39,20 @@
       <button id="place_btn" class="active">Место</button>
       <button id="index_btn">Значение индекса</button>
     </div>
+    <div class="line_chart">
+      <div id="chart-container">
+        <canvas id="myChart"></canvas>
+      </div>
+    </div>
+    <div class="country_name">
+      <span></span>
+      <span>Uzbekistan</span>
+    </div>
+    <div class="button-container">
+      <button id="CIS" class="filter-btn active">Страны СНГ</button>
+      <button id="BRICS" class="filter-btn">Страны Брикс</button>
+      <button id="G8" class="filter-btn">Страны G8</button>
+    </div>
+    <div class="controls"></div>
   </div>
 </section>
