--- a/pages/rating.html
+++ b/pages/rating.html
@@ -48,11 +48,20 @@
       <span></span>
       <span>Uzbekistan</span>
     </div>
-    <div class="button-container">
-      <button id="CIS" class="filter-btn active">Страны СНГ</button>
-      <button id="BRICS" class="filter-btn">Страны Брикс</button>
-      <button id="G8" class="filter-btn">Страны G8</button>
+
+    <div class="controls">
+      <div class="button-container">
+        <button id="CIS" class="filter-btn active">Страны СНГ</button>
+        <button id="BRICS" class="filter-btn">Страны Брикс</button>
+        <button id="G8" class="filter-btn">Страны G8</button>
+      </div>
+      <form class="form_input">
+        <div class="input">
+          <input type="text" placeholder="Введите название страны" />
+        </div>
+        <button class="first-btn">Сравнить</button>
+        <button class="next-btn">Очистить график</button>
+      </form>
     </div>
-    <div class="controls"></div>
   </div>
 </section>
