--- a/pages/rating.html
+++ b/pages/rating.html
@@ -59,8 +59,14 @@
         <div class="input">
           <input type="text" placeholder="Введите название страны" />
         </div>
-        <button class="first-btn">Сравнить</button>
-        <button class="next-btn">Очистить график</button>
+        <button class="first-btn desktop">Сравнить</button>
+        <button class="first-btn responsive">
+          <i class="fa-solid fa-arrow-trend-up"></i>
+        </button>
+        <button class="next-btn desktop">Очистить график</button>
+        <button class="next-btn responsive">
+          <i class="fa-solid fa-trash"></i>
+        </button>
       </form>
     </div>
   </div>
